# 128Autograder

./: .coverage  .coveragerc  .gitignore  .ycm_extra_conf.py  :w  Dockerfile  Dockerfile.api  Dockerfile.build  docker-compose-test.yaml  docker-compose.yaml  gradescope.dockerfile  makefile  pylint.toml  pyproject.toml  run.dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
.github/workflows/: ci.yaml  codecov.yml  integration-tests.yaml  linux-test.yaml  macos-test.yaml  windows-test.yaml
docker/: generic.dockerfile  gradescope.dockerfile  run.dockerfile
integration/test_build_move_data_files/: verify.py
integration/test_build_move_starter_code/: run.sh  verify.py
integration/test_build_move_test_cases/: verify.py
integration/test_higher_previous_submissions/: submission_metadata.json
integration/test_higher_previous_submissions/studentTests/: test.py
integration/test_lower_previous_limit_exceeded/: verify.py
integration/test_lower_previous_limit_exceeded/studentTests/: test.py
integration/test_many_non_main_files/: verify.py
integration/test_many_non_main_files/studentTests/: test.py
integration/test_missing_function_definition/submission/: submission.py
integration/test_no_previous_submissions/submission/: submission.py
sandbox/: outputFile.txt
source/: config.toml  requirements.txt  run.py  run_autograder  setup.sh
source/Executors/: Environment.py  ExecuterBuild.py  Executor.py  __init__.py  common.py
source/Executors/Python/: Executor.py
source/StudentSubmission/: AbstractStudentSubmission.py  AbstractValidator.py  GenericValidators.py  IRunner.py  ISubmissionProcess.py  RunnableStudentMainModule.py  RunnableStudentSubmission.py  Runners.py  StudentSubmission.py  StudentSubmissionAssertions.py  StudentSubmissionExecutor.py  SubmissionProcessFactory.py  __init__.py  common.py
source/StudentSubmissionImpl/C/: CRunners.py  CSubmission.py  CSubmissionProcess.py  CValidators.py  __init__.py  common.py
source/StudentSubmissionImpl/GNU/: GNUSubmission.py
source/StudentSubmissionImpl/Python/: PythonEnvironment.py  PythonFileImportFactory.py  PythonImportFactory.py  PythonImportMachinery.py  PythonModuleImportFactory.py  PythonModuleMockImportFactory.py  PythonRunners.py  PythonRunnersOld.py  PythonSubmission.py  PythonSubmissionProcess.py  PythonValidators.py  Runners.py  __init__.py  common.py
source/Tasks/: Task.py  TaskRunner.py  common.py
source/TestingFramework/: Assertions.py  BaseTest.py  TestRegister.py  __init__.py  baseTest.py
source/app/: run-gradescope.py  run-prairelearn.py
source/autograder_cli/: build_autograder.py  create_upload.py  run_gradescope.py  run_local.py  run_prairelearn.py  run_prairielearn.py
source/autograder_platform/: cli.py
source/autograder_platform/Executors/: Executor.py
source/autograder_platform/StudentSubmission/: AbstractStudentSubmission.py  ISubmissionProcess.py  SubmissionProcessFactory.py
source/autograder_platform/Tasks/: Task.py  TaskRunner.py
source/autograder_platform/config/: Config.py
source/studentTests/: test.py  test_assertions.py  test_public.py
source/tests/: RunnableStudentMainModule.py  StudentSubmission.py  StudentSubmissionAssertions.py  StudentSubmissionStdIOAssertions.py  test.py
source/utils/: Build.py  Gradescope.py  __init__.py
source/utils/config/: Config.py  ConfigSchema.py  __init__.py  common.py  exceptions.py  schema.py
source/utils/student/: test_my_work.py
student/results/: results.json
student/submission/: .gitignore  based.py  submission.py
tests/: __init__.py  testAbstractStudentSubmission.py  testAssertions.py  testAutograderConfigMisc.py  testAutograderConfigurationBuilder.py  testAutograderConfigurationSchema.py  testBuild.py  testConfigSchema.py  testEnvironment.py  testExecutor.py  testFullExecutions.py  testGradescope.py  testRunnableStudentSubmission.py  testSharedMemory.py  testSingleFunctionMock.py  testStudentCreateGradescopeUpload.py  testStudentSubmission.py  testStudentSubmissionExecutor.py  testStudentTestMyWork.py  testTasks.py
tests/autograder_cli/: testCreateUpload.py  testGradescope.py  testRunLocal.py
tests/autograder_platform/: testAbstractStudentSubmission.py  testAutograderConfigurationSchema.py  testExecutor.py  testSingleFunctionMock.py
tests/cli_tests/: testCreateUpload.py  testRunGradescope.py  testRunLocal.py
tests/e2e/: integration_config.toml  verify.sh
tests/e2e/test_build/: verify.py
tests/e2e/test_many_non_main_files/: submission_metadata.json  verify.py
tests/e2e/test_requirements_in_submission/: verify.py
tests/e2e/test_run_test_my_work/: entrypoint.sh  test_my_work_config.toml  verify.py
tests/e2e/test_run_with_prairie_learn/: verify.py
tests/impl/c/: testCSubmission.py  testCSubmissionProcess.py
tests/impl/python/: testAstValidators.py  testFullExecutions.py  testPythonEnvironment.py  testPythonImportFactory.py  testPythonSubmission.py  testPythonSubmissionProcess.py  testRunnableStudentSubmission.py  (+2 more)
tests/integration/: integration_config.toml  verify.sh
tests/platform_tests/: testAssertions.py  testAutograderConfigMisc.py  testAutograderConfigurationSchema.py  testBuild.py  testEnvironment.py  testExecutor.py  testSharedMemory.py  testTasks.py
util/: create_new_autograder.sh  prepare_for_gradescope.sh  prepare_for_student.sh  update_existing_autograder.sh
util/student/: test_my_work.py
(+60 files in other folders)
